--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -13,15 +13,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: "21"
+          distribution: "temurin"
 
-    - name: Compile Java files
-      run: javac -d bin src/*.java
-      
+      - name: Create bin directory
+        run: mkdir -p bin
+
+      - name: Compile Java files
+        run: javac -d bin src/*.java
+
+      - name: Upload compiled files
+        uses: actions/upload-artifact@v3
+        with:
+          name: compiled-files
+          path: bin/
+          retention-days: 1
