--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
 
+# Add permissions needed for creating releases
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   compile:
     runs-on: ubuntu-latest
@@ -70,10 +75,13 @@ jobs:
           echo "new_version=$new_version" >> $GITHUB_OUTPUT
 
       - name: Download compiled artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: compiled-files
           path: bin
+
+      - name: List files in bin
+        run: ls -la bin/
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -82,8 +90,7 @@ jobs:
           name: Release ${{ steps.generate_version.outputs.new_version }}
           draft: false
           prerelease: false
-          files: |
-            bin/*
+          files: bin/*
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
