--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -2,10 +2,10 @@ name: Compile
 on:
   push:
     branches:
-      - main
+      - development
   pull_request:
     branches:
-      - main
+      - development
 jobs:
   check:
     runs-on: ubuntu-latest
