--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,12 +10,21 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v3
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-    - name: Compile Java files
-      run: javac -d bin src/*.java
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: "21"
+          distribution: "temurin"
+      - name: Create build directory
+        run: mkdir -p build
+      - name: Compile Java files
+        run: |
+          javac -d build -sourcepath src $(find src/jabberpoint -name "*.java")
+      - name: Verify compilation
+        run: |
+          if [ ! -d "build/jabberpoint" ]; then
+            echo "Compilation failed: build directory is empty"
+            exit 1
+          fi
