--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,20 +26,28 @@ jobs:
           java-version: "21"
           distribution: "temurin"
 
-      - name: Create bin directory
-        run: mkdir -p bin
+      - name: Create build directory
+        run: mkdir -p build
 
       - name: Compile Java files
-        run: javac -d bin src/*.java
+        run: |
+          javac -d build -sourcepath src $(find src/jabberpoint -name "*.java")
+
+      - name: Copy resources
+        run: |
+          for ext in xml jpg gif; do
+            find . -maxdepth 1 -name "*.$ext" -exec cp {} build/ \; 2>/dev/null || true
+            find src -name "*.$ext" -exec cp {} build/ \; 2>/dev/null || true
+          done
 
       - name: Create JAR manifest
         run: |
-          echo "Main-Class: JabberPoint" > manifest.txt
+          echo "Main-Class: jabberpoint.JabberPoint" > manifest.txt
 
       - name: Create JAR file
         run: |
-          cd bin
-          jar cfm ../JabberPoint.jar ../manifest.txt *
+          cd build
+          jar cfm ../JabberPoint.jar ../manifest.txt jabberpoint/*
 
       - name: Upload JAR file
         uses: actions/upload-artifact@v4
