ci: update GitHub Actions workflow to create build directory and adjust Java package configuration

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,10 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "21"
-          cache: "maven"
+          java-package: "jdk"
+
+      - name: Create build directory
+        run: mkdir -p build
 
       - name: Make test script executable
         run: chmod +x run-tests.sh
