--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,14 +26,19 @@ jobs:
           java-version: "21"
           java-package: "jdk"
 
+      - name: Install xvfb
+        run: sudo apt-get install -y xvfb
+
       - name: Create build directory
         run: mkdir -p build
 
       - name: Make test script executable
         run: chmod +x run-tests.sh
 
-      - name: Run tests
-        run: ./run-tests.sh
+      - name: Run tests with Xvfb
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" ./run-tests.sh
+        env:
+          DISPLAY: ":99.0"
 
       - name: Upload test results
         if: always()
